# terminal-pet

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: profile-badge.yml
assets/: banner.txt  screenshot.txt
src/terminal_pet/: __init__.py  achievements.py  badge.py  cli.py  display.py  pet.py  tracker.py
tests/: __init__.py  test_pet.py
